# attendance-system

./: .cache_ggshield  .env-dev  .env-dev.backup-20241115135414  .env-dev.example  .env-development.example  .env-prod.example  .env-production.example  .env.test  .gitignore  Dockerfile  LICENSE  Makefile  OLTPvsOLAP.md  PyWhatKit_DB.txt  README.md  __init__.py  build_docs.py  calabi  calabi.c  calabi.py  check-settings.py  claude.txt  delete-vault-consul-containers.sh  docker-compose.yml  email_headers.py  errores-ejecucion-test-containers.txt  fibonacci.py  filtering_data.py  first-steps.md  fucking_faker.py  heroku.yml  init-swarm.sh  init_env.py  multiprocess.py  nato.py  package-lock.json  package.json  patroni.yml  prometheus.yml  propuesta_init_swarm.sh  (+17 more)
.github/workflows/: ci.yml  deploy.yml
attendance_system/: __init__.py  config.py  main.py
attendance_system/api/: __init__.py  dependencies.py
attendance_system/api/endpoints/: __init__.py  websocket.py  whatsapp.py
attendance_system/api/models/: __init__.py  schemas.py
attendance_system/core/: __init__.py  config.py  security.py
attendance_system/db/: __init__.py  base.py  models.py  session.py
attendance_system/services/: __init__.py  attendance.py  claude.py  whatsapp.py
autogen/: =0.2.0  Dockerfile  docker-compose.yml  main.py
backend/: Dockerfile  README.md  __init__.py  backend-entrypoint.sh  config.py  main.py  pyproject.toml
backend/api/: __init__.py  dependencies.py
backend/api/endpoints/: __init__.py  websocket.py  whatsapp.py
backend/api/models/: __init__.py  schemas.py
backend/core/: __init__.py  app.py  config.py  security.py
backend/db/: __init__.py  base.py  models.py  models_acl.py  session.py  types.py
backend/db/schema/: schema.sql
backend/scripts/: README.md  consul.hcl  fetch-secrets.sh  init-vault-dev.sh  init-vault.sh  rotate-secrets.sh  secure-env.sh  simple-init-vault.sh  vault.hcl
backend/security/: apparmor-profile  audit.rules  seccomp-profile.json
backend/services/: __init__.py  attendance.py  claude.py  database_manager.py  message_coordinator.py  service_status.py  utils.py  whatsapp.py
backend/static/js/: i18n.js
backend/static/js/translations/: en-US.js  es-ES.js
backend/tests/: conftest.py  conftests.py  test_db.py  test_settings.py
backend/tests/containers/: postgres.py  test_data.sql
backend/tests/stored_procedures/: conftest.py  test_stored_procedures.py
backend/tests/utils/: docker_check.py
boofuzz/: sample.py
docs/source/: conf.py  index.rst
frontend/: Dockerfile  frontend-entrypoint.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/nginx/conf/: nginx.conf
frontend/nginx/conf/conf.d/: frontend.conf  gzip.conf  proxy.conf  (+3 more)
frontend/public/: index.html
frontend/public/i18n/: config.js  en-US.js  es-ES.js
frontend/scripts/: fetch-vault-secrets.sh
frontend/src/: App.js  App.tsx  main.js  main.tsx
frontend/src/components/: Dashboard.js  Dashboard.jsx  Dashboard.tsx  Profile.tsx  ServiceStatus.js  ServiceStatus.jsx  ServiceStatus.tsx  Settings.tsx
homeassistant/: Dockerfile-bridge  Dockerfile-ollama-mistral  README.md  bridge.py  climate_sensors.csv  docker-compose.yml  e2e.py  energy_sensors.csv  entrypoint.sh  generate_syntetic_data.py  home_assistant_ws.py  home_assistant_ws_ollama.py  llm.py  mqtt_sensor_simulator.py  requirements.txt
homeassistant/config/: configuration.yaml  home-assistant.log.1  home-assistant_v2.db-shm  home-assistant_v2.db-wal  sensors.yaml
homeassistant/mosquitto/config/: mosquitto.conf  mosquitto.passwd  secrets.yaml
migrations/: README
migrations/versions/: 001_initial_schema.py  002_add_service_status.py
mk/: colors.mk
nginx/conf/: nginx.conf
nginx/conf/conf.d/: gzip.conf  ssl.conf  upstream.conf
nginx/html/: maintenance.html
nginx/html/errors/: 401.html  403.html  429.html  50x.html
nginx/static/js/: maintenance.js
postgreSQL/: 01_extensions_and_types.sql  02_base_tables.sql  03_partitioning.sql  04_procedures.sql  05_query_functions.sql  06_maintenance_procedures.sql  07_security_procedures.sql  08_views_and_reports.sql  09_cleanup_and_optimization.sql  10_migration_procedures.sql  11_citus_distribution.sql  12_citus_distribution.sql  12_init_test_data.sql  13_citus_verification.sql  14_citus_network.sql  Dockerfile  build_pg_container_acl_encrypt_decrypt_test.sh  build_postgres_container_test.sh  dockerfile_pg_container_acl_encrypt_decrypt_test  dockerfile_postgres_test_containers  entrypoint.sh  historial.sql  how to configure citus.md  how-to-test-test-container.md  how-to-test-test-container.txt  init-db.sql  init_database.sh  init_database.sql  init_database_data.sql  init_database_schema.sql  pg_hba.conf  pg_hba_new.conf  postgresql.conf  remove_postgres_encrypted.sh  replica_postgres_encrypted.sh  scale_postgres_encrypted.sh  updated-db-diagram.mermaid
rag/: README.md  advanced_rag.py  advanced_rag_ray.py  build_vector_store_ray.py  chat.py  cheatsheet.md  deep_research.py  deep_research_terminal.py  exports  open_deep_researcher.py  optimized_deep_research.py  previous.md
ray/: parallel_functions.py
scapy/: README.md  advanced_dns_spoof_protection.py  arp_defense.py  arp_monitor.py  arp_spoof_detector.py  arp_spoof_detector_geo.py  arp_spoof_simple.py  dataclasses.py  dns_spoof.py  dns_spoof_detector.py  dns_spoof_protection.py  fuzzing_dns.py  fuzzing_dns_multi_thread.py  multi_thread_optimized.py  sample.py  wireshark_spoof_detector.py
tests/: __init__.py  conftest.py  test_api.py  test_services.py
tests/integration/: test_claude_service.py  test_message_coordinator.py  test_services.py  test_whatsapp_service.py
tests/unit/: test_api.py  test_api_endpoints_message_coordinator.py  test_attendance_service.py  test_claude_service.py  test_message_coordinator.py  test_services.py  test_validators.py  test_whatsapp_service.py
watermark/: README.md  another_tool.py  better_version.py  command_tool.py  generate_logo.py  recover_watermark.py  tool.py
(+3317 files in other folders)
